' https://plantuml.com/ie-diagram
@startuml task_tracker_erd

entity User {
    * id : int <<PK>>
    --
    name : varchar
    email : varchar
    password : varchar
}

entity Workspace {
    * id : int <<PK>>
    --
    name : varchar
    ownerId : int <<FK>>
}

entity Member {
    * id : int <<PK>>
    * workspaceId : int <<FK>>
    * userId : int <<FK>>
    --
    status : varchar
    role : varchar
}

entity Task {
    * id : int <<PK>>
    --
    workspaceId : int <<FK>>
    title : varchar
    description : text
    status : varchar
    scheduledAt : timestamp
    dueAt : timestamp
    assignedTo : int <<FK>>
    createdBy : int <<FK>>
    startedAt : timestamp
    finishedAt : timestamp
    closedAt : timestamp
}

' Relationships
' Zero or One	|o--
' Exactly One	||--
' Zero or Many	}o--
' One or Many	}|--
User ||--o{ Workspace : owns
User ||--o{ Member : joins
Workspace ||--o{ Member : has
Workspace ||--o{ Task : has
User ||--o{ Task : assigned
User ||--o{ Task : created

@enduml
